dist_man1_MANS=

if BUILD_ELEVENSEVENTYFIVED
  dist_man1_MANS+=elevenseventyfived.1
endif

if ENABLE_QT
  dist_man1_MANS+=elevenseventyfive-qt.1
endif

if BUILD_ELEVENSEVENTYFIVE_CLI
  dist_man1_MANS+=elevenseventyfive-cli.1
endif

if BUILD_ELEVENSEVENTYFIVE_TX
  dist_man1_MANS+=elevenseventyfive-tx.1
endif

if BUILD_ELEVENSEVENTYFIVE_UTIL
  dist_man1_MANS+=elevenseventyfive-util.1
endif

if ENABLE_WALLET
if BUILD_ELEVENSEVENTYFIVE_WALLET
  dist_man1_MANS+=elevenseventyfive-wallet.1
endif
endif
